# fmtools

./: Cargo.toml  license.txt  readme.md
.github/workflows/: ci.yml
src/: join.rs  lib.rs  prelude.rs  template.rs
